[package]
name = "bevy_reflect_utils"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Robert Dodd"]
description = "A small, plugin-less utility library making it easier to work with reflection in bevy."
repository = "https://github.com/robertdodd/bevy_reflect_utils"
homepage = "https://github.com/robertdodd/bevy_reflect_utils"
keywords = ["bevy", "gui", "gamedev"]
categories = ["gui", "game-development"]
readme = "README.md"

[dependencies]
bevy = "0.15"
serde = { version = "1.0", features = [ "derive"] }
